--- a/attention.html
+++ b/attention.html
@@ -9,9 +9,9 @@
   <meta name="citation_language" content="en">
 </head>
 <body>
-  <h1>The Market for Attention</h1>
+  <h1>A Model of the Attention Economy</h1>
   <p><strong>Author:</strong> Daniel T. Chen</p>
-  <p><strong>Date:</strong> May 2024</p>
+  <p><strong>Date:</strong> August 2025</p>
   <p><a href="https://danieltchen.com/Aug31Revision.pdf">Download PDF</a></p>
 </body>
 </html>
